--- a/sow/app/globals.css
+++ b/sow/app/globals.css
@@ -1,10 +1,15 @@
 /* styles/globals.css */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f5f7;
+  background-color:white;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
