--- a/sow/components/Login.module.css
+++ b/sow/components/Login.module.css
@@ -4,19 +4,29 @@
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 450px;
+    max-width: 500px;
     text-align: center;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   }
   
   .login-container .logo {
-    width: 131px;
-    height: 68px;
+    width: 151px;
+    height: 60px;
   }
   
   .login-container h1 {
-    font-size: 1.5rem;
+   font-size:  calc(1.375rem + 1.5vw);
     margin-bottom: 0.5rem;
-    color: #333;
+    margin-top: 0;
+    color:#000000;
+    font-weight: 500;
+    line-height: 1.2;
+    
   }
   
   .login-container p {
@@ -39,13 +49,17 @@
   }
   
   .form-group input {
-    width: 90%;
-    padding: 0.8rem;
+    width: 95%;
+    padding: 10px;
     border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 0.9rem;
+    border-radius: 6px;
+    font-size: 1rem;
+    /* transition: border-color 0.3s ease-in-out; */
   }
-  
+  .form-group input:focus {
+    border-color: #007bff;
+    outline: none;
+  }
   .actions {
     display: flex;
     justify-content: space-between;
@@ -57,6 +71,10 @@
   
   .actions input {
     margin-right: 0.5rem;
+  }
+  .actions a {
+    text-decoration: none;
+    color: #007bff;
   }
   
   .login-btn {
@@ -79,4 +97,3 @@
     font-size: 0.9rem;
     margin-top: 1rem;
   }
-  
